--- a/experiencia-gastronomica.html
+++ b/experiencia-gastronomica.html
@@ -70,12 +70,11 @@
         <!-- Gastronomy Intro Section -->
         <section class="py-20 px-6 bg-gray-100" data-aos="fade-up">
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
-                <img src="path/to/intro.jpg" alt="Intro" class="w-full h-80 object-cover rounded-lg shadow-md">
+                <img src="images/experiencia_gastronomica/1.jpg" alt="Intro"
+                    class="w-full h-80 object-cover rounded-lg shadow-md">
                 <div>
-                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Intro</h3>
-                    <p class="text-gray-700" data-translate="introduction-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam fermentum,
-                        lacus at tincidunt gravida, justo sem porta ligula, non dignissim nisl nunc at elit. Duis ut
-                        sapien nec neque fermentum suscipit.</p>
+                    <h3 class="text-3xl font-semibold text-teal-700 mb-4" data-translate="introduction-title"></h3>
+                    <p class="text-gray-700" data-translate="introduction-desc"></p>
                 </div>
             </div>
         </section>
@@ -84,54 +83,28 @@
         <section class="py-20 px-6 bg-white" data-aos="fade-up">
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
                 <div>
-                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Centenary Tabernas of Madrid</h3>
-                    <p class="text-gray-700" data-translate="centenary-tabernas-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a urna non
-                        eros fermentum tincidunt. Integer ut ex sed libero luctus pretium. Vivamus gravida nunc non
-                        lectus sagittis, id congue turpis fermentum.</p>
+                    <h3 class="text-3xl font-semibold text-teal-700 mb-4" data-translate="centenary-tabernas-title">
+                    </h3>
+                    <p class="text-gray-700" data-translate="centenary-tabernas-desc"></p>
                 </div>
-                <img src="path/to/tabernas.jpg" alt="Centenary Tabernas"
+                <img src="images/experiencia_gastronomica/centenary_tabernas/20210920_181036.jpg" alt="Centenary Tabernas"
                     class="w-full h-80 object-cover rounded-lg shadow-md">
             </div>
         </section>
 
         <!-- Terrace Hopping - Gastronómica -->
-        <section class="py-20 px-6 bg-gray-100" data-aos="fade-up">
+        <section class="py-20 px-6 bg-gray-100 mb-4" data-aos="fade-up">
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
-                <img src="path/to/terrace-food.jpg" alt="Terrace Gastronomy"
+                <img src="images/eventos/20210901_215540.jpg" alt="Terrace Gastronomy"
                     class="w-full h-80 object-cover rounded-lg shadow-md">
                 <div>
-                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Terrace Hopping - Gastronómica</h3>
-                    <p class="text-gray-700" data-translate="terrace-hopping"></p>
+                    <h3 class="text-3xl font-semibold text-teal-700 mb-4" data-translate="terraceHopping-title"></h3>
+                    <p class="text-gray-700" data-translate="terraceHopping-desc"></p>
                 </div>
             </div>
         </section>
 
-        <!-- Terrace Hopping - Histórica -->
-        <section class="py-20 px-6 bg-white" data-aos="fade-up">
-            <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
-                <div>
-                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Terrace Hopping – Histórica</h3>
-                    <p class="text-gray-700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque accumsan
-                        nisl nec neque malesuada, nec sollicitudin erat iaculis. Suspendisse vehicula massa et lorem
-                        porta, id pretium elit fringilla.</p>
-                </div>
-                <img src="path/to/terrace-history.jpg" alt="Terrace Historic"
-                    class="w-full h-80 object-cover rounded-lg shadow-md">
-            </div>
-        </section>
 
-        <!-- Tapas Youth Culture Night in Malasaña -->
-        <section class="py-20 px-6 bg-gray-100" data-aos="fade-up">
-            <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
-                <img src="path/to/malasana.jpg" alt="Malasaña Night"
-                    class="w-full h-80 object-cover rounded-lg shadow-md">
-                <div>
-                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Tapas Youth Culture Night in Malasaña
-                        Neighbourhood</h3>
-                    <p class="text-gray-700" data-translate="tapas-malasaña-desc"></p>
-                </div>
-            </div>
-        </section>
 
         <!-- Real Markets Tour -->
         <section class="py-20 px-6 bg-white" data-aos="fade-up">
@@ -140,7 +113,20 @@
                     <h3 class="text-3xl font-semibold text-teal-700 mb-4">Real Markets Tour</h3>
                     <p class="text-gray-700" data-translate="real-market-desc"></p>
                 </div>
-                <img src="path/to/market.jpg" alt="Real Markets" class="w-full h-80 object-cover rounded-lg shadow-md">
+                <img src="images/eventos/20230824_214424.jpg" alt="Real Markets" class="w-full h-80 object-cover rounded-lg shadow-md">
+            </div>
+        </section>
+
+        <!-- Tapas Youth Culture Night in Malasaña -->
+        <section class="py-20 px-6 bg-gray-100" data-aos="fade-up">
+            <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
+                <img src="images/experiencia_gastronomica/classic_tapas/20241122_222615.jpg" alt="Malasaña Night"
+                    class="w-full h-80 object-cover rounded-lg shadow-md">
+                <div>
+                    <h3 class="text-3xl font-semibold text-teal-700 mb-4">Tapas Youth Culture Night in Malasaña
+                        Neighbourhood</h3>
+                    <p class="text-gray-700" data-translate="tapas-malasaña-desc"></p>
+                </div>
             </div>
         </section>
 
