--- a/index.html
+++ b/index.html
@@ -320,6 +320,22 @@
         </div>
     </section>
 
+    <!-- Galería Section-->
+    <section class="py-16 px-6 bg-teal-100" data-aos="fade-up">
+        <h2 class="text-3xl font-semibold text-teal-700 text-center mb-12" data-translate="galería-title">Galería</h2>
+
+        <div class="max-w-[1280px] mx-auto">
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-3">
+                <img src="path/to/food1.jpg" alt="Gastronomía 1" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="path/to/food2.jpg" alt="Gastronomía 2" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="path/to/food3.jpg" alt="Gastronomía 3" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="path/to/food4.jpg" alt="Gastronomía 4" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="path/to/food5.jpg" alt="Gastronomía 5" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="path/to/food6.jpg" alt="Gastronomía 6" class="w-full h-64 object-cover rounded-lg shadow-md">
+            </div>
+        </div>
+
+    </section>
 
     <!--
     <section id="tickets" class="py-20 px-6 text-center bg-white">
