--- a/experiencia-gastronomica.html
+++ b/experiencia-gastronomica.html
@@ -63,12 +63,12 @@
     </nav>
 
     <section id="main-section" data-aos="fade-up" class="py-20 px-6 text-center bg-white Container_containerlg__tE5_m">
-        <h2 class="text-4xl font-semibold text-teal-700 mb-8" data-translate="experiencia-gastronomica">
+        <h2 class="text-4xl font-semibold text-teal-700 mb-8 cinzel" data-translate="experiencia-gastronomica">
             Experiencia Gastronómica
         </h2>
 
         <!-- Gastronomy Intro Section -->
-        <section class="py-20 px-6 bg-gray-100" data-aos="fade-up">
+        <section class="py-20 px-6 bg-teal-100" data-aos="fade-up">
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
                 <img src="images/experiencia_gastronomica/1.jpg" alt="Intro"
                     class="w-full h-80 object-cover rounded-lg shadow-md">
@@ -93,7 +93,7 @@
         </section>
 
         <!-- Terrace Hopping - Gastronómica -->
-        <section class="py-20 px-6 bg-gray-100 mb-4" data-aos="fade-up">
+        <section class="py-20 px-6 bg-teal-100 mb-4" data-aos="fade-up">
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
                 <img src="images/eventos/20210901_215540.jpg" alt="Terrace Gastronomy"
                     class="w-full h-80 object-cover rounded-lg shadow-md">
@@ -118,7 +118,7 @@
         </section>
 
         <!-- Tapas Youth Culture Night in Malasaña -->
-        <section class="py-20 px-6 bg-gray-100" data-aos="fade-up">
+        <section class="py-20 px-6 bg-teal-100" data-aos="fade-up">
             <div class="max-w-6xl mx-auto grid md:grid-cols-2 gap-10 items-center">
                 <img src="images/experiencia_gastronomica/classic_tapas/20241122_222615.jpg" alt="Malasaña Night"
                     class="w-full h-80 object-cover rounded-lg shadow-md">
@@ -168,7 +168,7 @@
             class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-center md:text-left">
             <!-- Left: Copyright -->
             <div class="mb-4 md:mb-0">
-                <p>&copy; 2025 Petra Pimminger. Diseñado por
+                <p>&copy; 2026 Petra Pimminger. Diseñado por
                     <a href="http://selekode.github.io/SeanLeitch" class="underline hover:text-teal-300">
                         <span>Sean Leitch</span>
                     </a>
