--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </section>
 
     <section id="services" data-aos="fade-up" class="py-20 px-6 text-center bg-[#F6F5F4] Container_containerlg__tE5_m">
-        <h2 class="text-4xl font-semibold text-teal-700" data-translate="our-services">Nuestros Servicios</h2>
+        <h2 class="text-4xl font-semibold text-teal-700 cinzel" data-translate="our-services">Nuestros Servicios</h2>
         <div class="mt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
             <!-- Tour Histórico -->
@@ -177,7 +177,7 @@
 
     <section id="testimonials" data-aos="fade-up" class="py-20 px-6 bg-teal-100">
         <div class="max-w-[1280px] w-full mx-auto">
-            <h2 class="text-4xl font-semibold text-teal-700 text-center" data-translate="testimonials-title">
+            <h2 class="text-4xl font-semibold text-teal-700 text-center cinzel" data-translate="testimonials-title">
                 Lo que dicen nuestros clientes
             </h2>
 
@@ -276,8 +276,8 @@
     </section>
 
     <!-- Descubre Madrid Section-->
-    <section class="py-16 px-6 bg-white" data-aos="fade-up">
-        <h2 class="text-3xl font-semibold text-teal-700 text-center mb-12" data-translate="carousel-title">Descubre
+    <section class="py-16 px-6 bg-white " data-aos="fade-up">
+        <h2 class="text-3xl font-semibold text-teal-700 text-center mb-12 cinzel" data-translate="carousel-title">Descubre
             Madrid</h2>
 
         <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-10 items-center">
@@ -322,16 +322,16 @@
 
     <!-- Galería Section-->
     <section class="py-16 px-6 bg-teal-100" data-aos="fade-up">
-        <h2 class="text-3xl font-semibold text-teal-700 text-center mb-12" data-translate="galería-title">Galería</h2>
+        <h2 class="text-3xl font-semibold text-teal-700 text-center mb-12 cinzel" data-translate="galería-title">Galería</h2>
 
         <div class="max-w-[1280px] mx-auto">
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-3">
-                <img src="path/to/food1.jpg" alt="Gastronomía 1" class="w-full h-64 object-cover rounded-lg shadow-md">
-                <img src="path/to/food2.jpg" alt="Gastronomía 2" class="w-full h-64 object-cover rounded-lg shadow-md">
-                <img src="path/to/food3.jpg" alt="Gastronomía 3" class="w-full h-64 object-cover rounded-lg shadow-md">
-                <img src="path/to/food4.jpg" alt="Gastronomía 4" class="w-full h-64 object-cover rounded-lg shadow-md">
-                <img src="path/to/food5.jpg" alt="Gastronomía 5" class="w-full h-64 object-cover rounded-lg shadow-md">
-                <img src="path/to/food6.jpg" alt="Gastronomía 6" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="images/eventos/20220621_141445.jpg" alt="Gastronomía 1" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="images/eventos/20220723_214946.jpg" alt="Gastronomía 2" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="images/eventos/20240412_153108.jpg" alt="Gastronomía 3" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="images/eventos/20240322_205832.jpg" alt="Gastronomía 4" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="images/eventos/20240603_233407.jpg" alt="Gastronomía 5" class="w-full h-64 object-cover rounded-lg shadow-md">
+                <img src="images/eventos/20240317_000125.jpg" alt="Gastronomía 6" class="w-full h-64 object-cover rounded-lg shadow-md">
             </div>
         </div>
 
@@ -380,7 +380,7 @@
             class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-center md:text-left">
             <!-- Left: Copyright -->
             <div class="mb-4 md:mb-0">
-                <p>&copy; 2025 Petra Pimminger. Diseñado por
+                <p>&copy; 2026 Petra Pimminger. Diseñado por
                     <a href="http://selekode.github.io/SeanLeitch" class="underline hover:text-teal-300">
                         <span>Sean Leitch</span>
                     </a>
