--- a/eventos-cultura.html
+++ b/eventos-cultura.html
@@ -65,18 +65,23 @@
     </nav>
 
     <section id="services" data-aos="fade-up" class="py-20 px-6 text-center bg-white Container_containerlg__tE5_m">
-        <h2 class="text-4xl font-semibold text-teal-700 mb-8" data-translate="eventos-cultura">
+        <h2 class="text-4xl font-semibold text-teal-700 mb-8 cinzel" data-translate="events-culture">
             Eventos y Cultura
         </h2>
 
+        <p data-translate="description-paragraph-1" class="mb-4"></p>
+        <p data-translate="description-paragraph-2" class="mb-4"></p>
+        <p data-translate="description-paragraph-3" class="mb-4"></p>
+        <p data-translate="description-paragraph-4" class="mb-8"></p>
+
         <!-- Gallery Grid -->
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-3">
-            <img src="path/to/food1.jpg" alt="Gastronomía 1" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="path/to/food2.jpg" alt="Gastronomía 2" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="path/to/food3.jpg" alt="Gastronomía 3" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="path/to/food4.jpg" alt="Gastronomía 4" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="path/to/food5.jpg" alt="Gastronomía 5" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="path/to/food6.jpg" alt="Gastronomía 6" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/eventos/20210901_215540.jpg" alt="Gastronomía 1" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/eventos/20211020_140631.jpg" alt="Gastronomía 2" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/eventos/20211121_011504.jpg" alt="Gastronomía 3" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/eventos/20220723_214946.jpg" alt="Gastronomía 4" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/eventos/20240412_153108.jpg" alt="Gastronomía 5" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/eventos/20240630_182752.jpg" alt="Gastronomía 6" class="w-full h-64 object-cover rounded-lg shadow-md">
         </div>
     </section>
 
@@ -112,7 +117,7 @@
         </div>
     </section>
     <footer class="bg-teal-700 text-white py-6 text-center text-sm">
-        <p>&copy; 2025 Madrid by Petra. Diseñado por <a href="http://selekode.github.io/SeanLeitch"><span>Sean
+        <p>&copy; 2026 Madrid by Petra. Diseñado por <a href="http://selekode.github.io/SeanLeitch"><span>Sean
                     Leitch</span></a></p>
     </footer>
 
@@ -124,7 +129,7 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/translate.js"></script>
+    <script src="js/translateEventosYCultura.js"></script>
     <script src="js/translateDropdown.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/carousel.js"></script>
