--- a/pinta-cata.html
+++ b/pinta-cata.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="bg-white">
-    <nav class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg z-10">
+        <nav class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg z-10">
 
         <div class="container mx-auto flex justify-between items-center">
             <!-- Menu toggle button (now visible on all screen sizes) -->
@@ -49,7 +49,8 @@
         <div id="mobile-menu" class="mobile-menu absolute top-full left-0 w-full bg-teal-700 text-white py-4"
             style="display: none;">
             <ul class="text-center">
-                <li><a href="index.html" class="hover:text-teal-300 transition" data-translate="inicio">Inicio</a></li>
+				<li><a href="index.html" class="hover:text-teal-300 transition"
+                        data-translate="inicio">Inicio</a></li>
                 <li><a href="tours-historicos.html" class="hover:text-teal-300 transition"
                         data-translate="historic-tours">Tours Históricos</a></li>
                 <li><a href="experiencia-gastronomica.html" class="hover:text-teal-300 transition"
@@ -64,48 +65,20 @@
     </nav>
 
     <section id="services" data-aos="fade-up" class="py-20 px-6 text-center bg-white Container_containerlg__tE5_m">
-        <h2 class="text-4xl font-semibold text-teal-700 mb-8 cinzel" data-translate="tours-historicos"></h2>
-        <p class="text-gray-700 " data-translate="introduction-desc"></p>
-        <hr>
-        <div class="mb-10">
-            <h2 class="text-xl font-semibold text-teal-700 mb-4 mt-8 cinzel" data-translate="movidaMadrileña-title"> </h2>
-            <p class="text-gray-700 " data-translate="movidaMadrileña-desc"></p>
-            <div class="flex justify-center mt-3">
-                <img src="images/historic_tours/20231206_145453.jpg" alt="movidaMadrileña 1"
-                    class="w-64 h-64 object-cover rounded-lg shadow-md">
-            </div>
-        </div>
+        <h2 class="text-4xl font-semibold text-teal-700 mb-8 cinzel" data-translate="pinta-cata">
+            Pinta y Cata
+        </h2>
 
-        <hr>
+        <p data-translate="pintaycata-paragraph1" class="mb-4"></p>
 
-        <div class="mb-8">
-            <h2 class="text-xl font-semibold text-teal-700 mb-4 mt-8 cinzel"
-                data-translate="losAustriasColeccionesReales-title">
-            </h2>
-            <p class="text-gray-700" data-translate="losAustriasColeccionesReales-desc"></p>
-            <div class="flex flex-wrap justify-center gap-4 mt-3">
-                <img src="images/historic_tours/losAustriasColeccionesReales-1.webp"
-                    alt="losAustriasColeccionesReales 1" class="w-full sm:w-64 h-64 object-cover rounded-lg shadow-md">
-                <img src="images/historic_tours/losAustriasColeccionesReales-2.webp"
-                    alt="losAustriasColeccionesReales 2" class="w-full sm:w-64 h-64 object-cover rounded-lg shadow-md">
-                <img src="images/historic_tours/losAustriasColeccionesReales-3.webp"
-                    alt="losAustriasColeccionesReales 3" class="w-full sm:w-64 h-64 object-cover rounded-lg shadow-md">
-            </div>
-        </div>
-
-        <hr>
-        <div class="mb-8">
-            <h2 class="text-xl font-semibold text-teal-700 mb-4 mt-8 cinzel" data-translate="tesorosMuseoAmerica-title">
-            </h2>
-            <p class="text-gray-700" data-translate="tesorosMuseoAmerica-desc"></p>
-            <div class="flex flex-wrap justify-center gap-4 mt-3">
-                <img src="images/historic_tours/tesorosMuseoAmerica.webp" alt="tesorosMuseoAmerica 1"
-                    class="w-full sm:w-64 h-64 object-cover rounded-lg shadow-md">
-                <img src="images/historic_tours/tesorosMuseoAmerica-2.png" alt="tesorosMuseoAmerica 2"
-                    class="w-full sm:w-64 h-64 object-cover rounded-lg shadow-md">
-                <img src="images/historic_tours/tesorosMuseoAmerica-3.jpg" alt="tesorosMuseoAmerica 3"
-                    class="w-full sm:w-64 h-64 object-cover rounded-lg shadow-md">
-            </div>
+        <!-- Gallery Grid -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-3">
+            <img src="images/pintaYcata/20211205_200043.jpg" alt="Gastronomía 1" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/20230416_185324.jpg" alt="Gastronomía 2" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/PC Buzz 11.jpg" alt="Gastronomía 3" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/PC Buzz 13.jpg" alt="Gastronomía 4" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/PC Buzz 27.jpg" alt="Gastronomía 5" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/PC Buzz 3.jpg" alt="Gastronomía 6" class="w-full h-64 object-cover rounded-lg shadow-md">
         </div>
     </section>
 
@@ -153,7 +126,7 @@
     </a>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-    <script src="js/translateToursHistoricos.js"></script>
+    <script src="js/translatePintaYCata.js"></script>
     <script src="js/translateDropdown.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/carousel.js"></script>
