--- a/pinta-cata.html
+++ b/pinta-cata.html
@@ -19,7 +19,7 @@
 </head>
 
 <body class="bg-white">
-        <nav class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg z-10">
+    <nav class="navbar fixed top-0 left-0 w-full bg-teal-700 text-white py-4 px-6 shadow-lg z-10">
 
         <div class="container mx-auto flex justify-between items-center">
             <!-- Menu toggle button (now visible on all screen sizes) -->
@@ -49,8 +49,7 @@
         <div id="mobile-menu" class="mobile-menu absolute top-full left-0 w-full bg-teal-700 text-white py-4"
             style="display: none;">
             <ul class="text-center">
-				<li><a href="index.html" class="hover:text-teal-300 transition"
-                        data-translate="inicio">Inicio</a></li>
+                <li><a href="index.html" class="hover:text-teal-300 transition" data-translate="inicio">Inicio</a></li>
                 <li><a href="tours-historicos.html" class="hover:text-teal-300 transition"
                         data-translate="historic-tours">Tours Históricos</a></li>
                 <li><a href="experiencia-gastronomica.html" class="hover:text-teal-300 transition"
@@ -69,16 +68,28 @@
             Pinta y Cata
         </h2>
 
-        <p data-translate="pintaycata-paragraph1" class="mb-4"></p>
+        <p data-translate="pintaycata-paragraph-1" class="mb-4"></p>
 
         <!-- Gallery Grid -->
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-3">
-            <img src="images/pintaYcata/20211205_200043.jpg" alt="Gastronomía 1" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="images/pintaYcata/20230416_185324.jpg" alt="Gastronomía 2" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="images/pintaYcata/PC Buzz 11.jpg" alt="Gastronomía 3" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="images/pintaYcata/PC Buzz 13.jpg" alt="Gastronomía 4" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="images/pintaYcata/PC Buzz 27.jpg" alt="Gastronomía 5" class="w-full h-64 object-cover rounded-lg shadow-md">
-            <img src="images/pintaYcata/PC Buzz 3.jpg" alt="Gastronomía 6" class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/20211205_200043.jpg" alt="Gastronomía 1"
+                class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/20230416_185324.jpg" alt="Gastronomía 2"
+                class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/PC Buzz 11.jpg" alt="Gastronomía 3"
+                class="w-full h-64 object-cover rounded-lg shadow-md">
+        </div>
+
+        <p data-translate="pintaycata-paragraph-2" class="mt-10 mb-4"></p>
+
+        <!-- Gallery Grid -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-3">
+            <img src="images/pintaYcata/PC Buzz 13.jpg" alt="Gastronomía 4"
+                class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/PC Buzz 27.jpg" alt="Gastronomía 5"
+                class="w-full h-64 object-cover rounded-lg shadow-md">
+            <img src="images/pintaYcata/PC Buzz 3.jpg" alt="Gastronomía 6"
+                class="w-full h-64 object-cover rounded-lg shadow-md">
         </div>
     </section>
 
